# pyRTE-RRTMGP

./: .gitignore  CMakeLists.txt  README.md  pybind_interface.cpp  pyproject.toml
conda.recipe/: meta.yaml
pyrte_rrtmgp/kernels/: rrtmgp.py
pyrte_rrtmgp/tests/rrtmgp_compute_Planck_source_test/: compute_Planck_source_test.py
pyrte_rrtmgp/tests/rrtmgp_compute_tau_absorption_test/: compute_tau_absorption_test.py
tests/: requirements-test.txt
